--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -1,11 +1,3 @@
-/* 
-
-Moonlight Template 
-
-https://templatemo.com/tm-512-moonlight
-
-*/
-
 @keyframes seq-preloader {
   50% {
     opacity: 1;
@@ -707,7 +699,7 @@ nav a:hover::before {
 .footer .content p {
 	text-align: center;
 	font-size: 13px;
-	color: #fff;
+	color: rgb(8, 7, 7);
 	margin-bottom: 20px;
 }
 
