--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -287,22 +287,22 @@ nav a:hover::before {
 }
 
 .slides .slide:nth-child(1) {
-  background-image: url(../img/bg1.jpg);
+  background-image: url(../img/bg_1.jpg);
 }
 .slides .slide:nth-child(2) {
-  background-image: url(../img/White_bg.jpg);
+  background-image: url(../img/bg_1.jpg);
 }
 .slides .slide:nth-child(3) {
-  background-image: url(../img/White_bg.jpg);
+  background-image: url(../img/bg_1.jpg);
 }
 .slides .slide:nth-child(4) {
-  background-image: url(../img/White_bg.jpg);
+  background-image: url(../img/bg_1.jpg);
  }
 .slides .slide:nth-child(5) {
-  background-image: url(../img/White_bg.jpg);
+  background-image: url(../img/bg_1.jpg);
 }
 .slides .slide:nth-child(6) {
-  background-image: url(../img/White_bg.jpg);
+  background-image: url(../img/bg_1.jpg);
 }
 .slides .slide img {
   width: 100%;
